force-app/main/default/objects/NEO_Variable_Operator__c/NEO_Variable_Operator__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Variable Operator</label>
    <nameField>
        <displayFormat>VO-{00000000}</displayFormat>
        <label>NEO Variable Operator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>