force-app/main/default/objects/NEO_Variable_Operator__c/fields/NEO_Math_Operator__c.field-meta.xml
<CustomField>
    <fullName>NEO_Math_Operator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Math Operator?</label>
    <type>Checkbox</type>
</CustomField>