force-app/main/default/objects/NEO_Variable_Operator__c/fields/NEO_Operator__c.field-meta.xml
<CustomField>
    <fullName>NEO_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEO Operator</label>
    <referenceTo>NEO_Operator__c</referenceTo>
    <relationshipLabel>NEO Variable Operators</relationshipLabel>
    <relationshipName>NEO_Variable_Operators</relationshipName>
    <type>Lookup</type>
</CustomField>